fix issue with calendar not showing up on datepicker icon click

--- a/src/sass/app_2/_common/form/date_picker.scss
+++ b/src/sass/app_2/_common/form/date_picker.scss
@@ -207,10 +207,12 @@ div.datepicker-container {
         transition: all 0.3s;
         user-select: none;
         opacity: 0;
+        pointer-events: none;
         cursor: pointer;
 
         &.show {
             opacity: 1;
+            pointer-events: auto;
         }
         &.picker-calendar-icon:before {
             content: url('../images/trading_app/common/calendar.svg');
